Fix alignment

--- a/src/Partners.scss
+++ b/src/Partners.scss
@@ -17,6 +17,7 @@
 }
 .Partners__part {
 	display: flex;
+	align-items: center;
 }
 .Partners__part span {
 	flex-shrink: 0;
